--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ola!</title>
+    <title>Ola!My Profile--Aditi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -25,7 +25,7 @@
 
             <h5>WELCOME!</h5>
         </div>
-        <h3>I Am a Frontend Developer</h3>
+        <h3>I Am Frontend Developer</h3>
         <pre>                                            Namaste to everyone I 'm a student at Nepathya college studying
                                             batchelor's of Science in Computer Science and Information 
                                             Technology.</pre>
